'Testing' Host/Service feature

--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -129,6 +129,7 @@ form fieldset label {
 #delcontactgroupform h2,
 #delcontactform h2,
 #disablehostform h2,
+#testinghostform h2,
 #enablehostform h2,
 #clonesvcform h2 {
     font-weight: normal;
