--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -43,6 +43,17 @@
 /*
  * DIALOG FORM CONTENT
  */
+TEXTAREA#applyconfigtextarea {
+    /* background-image: url("images/working.gif"); */
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 80px 80px;
+    background-color: white;
+    width: 100%;
+    height: 200px;
+}
+
 div.flash.error {
     /* background: url("images/true.png") no-repeat scroll 8px 5px #DFFFDF; */
     background-image: url("images/false.png");
