--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -1,3 +1,24 @@
+/* Tab modifications */
+
+#edithosttabs .ui-tabs-nav,
+#edithosttabs .ui-corner-br
+{
+    background-color: white;
+    background-image: none;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+.ui-corner-all#edithosttabs
+{
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 0px;
+}
+
 /*
  * ICONS
  */
@@ -84,7 +105,8 @@ div.flash.notice {
 form fieldset {
     border-width: 0px;
     border-color: gray;
-    padding: 6px 20px 0px;
+    /* padding: 6px 20px 0px; */
+    padding: 6px 0px 0px;
 }
 form fieldset p {
     display:block;
