--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -33,6 +33,18 @@
     border-bottom-right-radius: 0px;
 }
 
+#pagetabs .ui-tabs-nav,
+.ui-corner-br#pagetabs
+{
+    border-bottom: 1px solid #666666;
+}
+#pagetabs li.ui-tabs-active
+{
+    border-top: 1px solid #666666;
+    border-left: 1px solid #666666;
+    border-right: 1px solid #666666;
+}
+
 /* Tab modifications */
 
 #editservicetabs .ui-tabs-nav,
