Autocomplete and bug fixes

--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -75,6 +75,24 @@
     background: #ffffff;
 }
 
+.ui-autocomplete
+{
+    max-height: 100px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+}
+
+/* IE 6 doesn't support max-height
+ * * we use height instead, but this forces the menu to always be this tall
+ * */
+html .ui-autocomplete
+{
+    max-height: 100px;
+    overflow-y: auto;
+    height: 100px;
+}
+
 /* Tab modifications */
 
 #bulktoolstabs .ui-tabs-nav,
