--- a/SOURCES/nagrestconf-1/nagrestconf/main.css
+++ b/SOURCES/nagrestconf-1/nagrestconf/main.css
@@ -348,6 +348,14 @@ form fieldset label {
     border-style: solid;
     border-color: #99CCFF;
 }
+.fieldgrey {
+    overflow:auto;
+    margin:5px 0px;
+    overflow: hidden;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #999999;
+}
 /*
  * BODY ETC
  */
